JVM/Truffle: reach the engine from compiled code, compile rules to it
GrammarEngine/TruffleGrammarEngine and the wire format; every generated
runner starts a JVM that can run a grammar; a rule compiles to a descriptor
instead of a matcher. NQP_JVM_TRUFFLE=require turns a missing engine into a
failure.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>